[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/scripts/UIRoundDisplay.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 13
extra_spacing_top = -10
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 13
extra_spacing_top = -10
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
extra_spacing_top = -14
extra_spacing_bottom = -9
font_data = ExtResource( 1 )

[node name="RoundTimer" type="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.0
margin_right = 85.0
margin_bottom = 45.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 160.0
margin_bottom = 23.0
custom_constants/separation = 4

[node name="RoundText" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 23.0
rect_min_size = Vector2( 66, 0 )
custom_fonts/font = SubResource( 1 )
text = "NEXT ROUND"
valign = 1
uppercase = true

[node name="RoundNumber" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 158.0
margin_bottom = 23.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "99"
align = 1
valign = 1

[node name="TimeLeft" type="Label" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 160.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "99:99"
valign = 1
